Wed Apr 17 12:27:07 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config: Removed --uninst support - it's very hard to make it
	  work reliably and we're better off directing our efforts towards
	  improving the library than trying to get it working and keep it
	  working.

Wed Apr 17 10:39:02 BST 2002  Olly Betts <olly@survex.com>

	* Fixed btreetest code to use new names "ord+" and "ord-" for
	  datafiles; disabled LFSinsertdelete1 test as it's exactly the
	  same as insertdelete1 (despite the comment above which suggests
	  it tests files >2G).

Mon Apr 15 17:14:22 BST 2002  Olly Betts <olly@survex.com>

	* Fix a few OmDatabase::InternalInterface uses I'd somehow missed.

Mon Apr 15 16:08:20 BST 2002  Olly Betts <olly@survex.com>

	* Mark internal classes as @internal for doxygen; removed all uses
	  of OmDatabase::InternalInterface as it's no longer needed.

Mon Apr 15 15:42:47 BST 2002  Olly Betts <olly@survex.com>

	* Updated TODO list.

Mon Apr 15 2002  Sam Liddicott <sam@ananova.com>

	* Hacked around bindings and bindings/php to remove some SWIG 
	  workarounds.  SWIG cvs + some new non-comitted patches is need still.

Mon Apr 15 12:12:05 BST 2002  Olly Betts <olly@survex.com>

	* stemtest: getopt fix.

	* stemtest.pl.in: output now: less verbose by default and coloured.

Mon Apr 15 11:18:58 BST 2002  Olly Betts <olly@survex.com>

	* Updated HACKING to say that automake 1.5 is required, and note that
	  automake 1.6.1 is better than 1.6.

Sat Apr 13 20:35:51 2002  James Aylett  <tartarus@users.sourceforge.net>

	* Fixed stemtest getopt usage so it works again.

Sat Apr 13 20:20:52 BST 2002  James Aylett  <tartarus@users.sourceforge.net>

	* Fixed omtcpsrv getopt usage so it works again.

Fri Apr 12 16:24:06 BST 2002  Olly Betts <olly@survex.com>

	* Require automake 1.5.

Fri Apr 12 12:11:57 BST 2002  Olly Betts <olly@survex.com>

	* omtcpsrv: Namespace fixes.

Fri Apr 12 12:25:42 BST 2002  Olly Betts <olly@survex.com>
