@@ -5,20 +5,9 @@
 </HEAD>
 <BODY BGCOLOR="white">
 
-<TABLE CELLPADDING=10 WIDTH=99%>
-<TR>
-<TD>
-</TD>
-<TD>
 <CENTER>
 <H1>Xapian - the open source search engine</H1>
 </CENTER>
-</TD>
-<TD WIDTH=114>
-<A HREF="http://www.brightstation.com/"><IMG SRC="home_egg_off.jpg" WIDTH=113 HEIGHT=110 BORDER=0 ALT="logo"><IMG SRC="home_logo.jpg" WIDTH=114 HEIGHT=22 BORDER=0 ALT="brightstation PLC"></A>
-</TD>
-</TR>
-</TABLE>
 
 <TABLE BORDER=0>
 <TR><TD VALIGN=top BGCOLOR="#22AA33">
