@@ -1,3 +1,7 @@
+Wed Apr 17 12:41:03 BST 2002  Olly Betts <olly@survex.com>
+
+	* Removed BrightStation's logo from the documentation.
+
 Wed Apr 17 12:27:07 BST 2002  Olly Betts <olly@survex.com>
 
 	* xapian-config: Removed --uninst support - it's very hard to make it
